tests/qd/compile_errors/break_outside_loop.qd
// Test: break outside loop

fn main() {
	10 20 add
	break
	. nl
}
